--- a/.gitignore
+++ b/.gitignore
@@ -73,10 +73,10 @@ lddi.knx/lddi.knx.networkdriver/.classpath
 lddi.knx/lddi.knx.networkdriver/.project
 lddi.knx/lddi.knx.networkdriver/.settings
 lddi.knx/lddi.knx.networkdriver/target
-lddi.knx/lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/.classpath
-lddi.knx/lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/.project
-lddi.knx/lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/.settings
-lddi.knx/lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/target
+lddi.knx/lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub/.classpath
+lddi.knx/lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub/.project
+lddi.knx/lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub/.settings
+lddi.knx/lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub/target
 lddi.pom/.project
 lddi.pom/.settings
 lddi.pom/composite/.classpath
