--- a/lddi.knx/lddi.knx.exporter/pom.xml
+++ b/lddi.knx/lddi.knx.exporter/pom.xml
@@ -4,12 +4,12 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.lddi</groupId>
-    <artifactId>lddi.pom</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
-    <relativePath>../lddi.pom</relativePath>
+    <artifactId>lddi.pom.knx</artifactId>
+    <version>2.0.2-SNAPSHOT</version>
+    <relativePath>../lddi.pom.knx</relativePath>
   </parent>
   <artifactId>lddi.knx.exporter</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.0.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI Exporter of KNX devices</name>
   <description>Hardware exporter of KNX Home Automation components for the universAAL middleware</description>
@@ -96,108 +96,6 @@
           </instructions>
         </configuration>
       </plugin>
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>2.5</version>
-        <executions>
-          <execution>
-            <id>copy-resources</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>launches</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>target</directory>
-                  <filtering>true</filtering>
-                  <includes>
-                    <include>**/*.composite</include>
-                  </includes>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-          <execution>
-            <id>copy-resources-for-mw2.0</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>launcher-mw2.0</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>target</directory>
-                  <filtering>true</filtering>
-                  <includes>
-                    <include>**/*.composite</include>
-                  </includes>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.universAAL.support</groupId>
-        <artifactId>uaal-maven-plugin</artifactId>
-        <configuration>
-          <startArtifacts>
-            <artifact>
-              <groupId>org.universAAL.lddi</groupId>
-              <artifactId>lddi.knx.devicemanager</artifactId>
-              <nostart>true</nostart>
-            </artifact>
-          </startArtifacts>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>uAAL-Runtime</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.universAAL.middleware</groupId>
-          <artifactId>mw.data.serialization.osgi</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.felix</groupId>
-          <artifactId>org.apache.felix.dependencymanager.lddi</artifactId>
-          <version>3.0.0</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.felix</groupId>
-          <artifactId>org.apache.felix.devicemanager</artifactId>
-          <version>0.9.0-SNAPSHOT</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.universAAL.lddi</groupId>
-          <artifactId>lddi.knx.library</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>org.universAAL.lddi</groupId>
-          <artifactId>lddi.knx.networkdriver</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.felix</groupId>
-          <artifactId>org.apache.felix.http.jetty</artifactId>
-          <version>2.2.0</version>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.felix</groupId>
-          <artifactId>org.apache.felix.webconsole</artifactId>
-          <version>3.1.8</version>
-        </dependency>
-        <dependency>
-          <groupId>org.universAAL.lddi</groupId>
-          <artifactId>lddi.knx.devicemanager</artifactId>
-        </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
 </project>
