--- a/lddi.knx/lddi.knx.library/pom.xml
+++ b/lddi.knx/lddi.knx.library/pom.xml
@@ -4,12 +4,12 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.lddi</groupId>
-    <artifactId>lddi.pom</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
-    <relativePath>../lddi.pom</relativePath>
+    <artifactId>lddi.pom.knx</artifactId>
+    <version>2.0.2-SNAPSHOT</version>
+    <relativePath>../lddi.pom.knx</relativePath>
   </parent>
   <artifactId>lddi.knx.library</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.0.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI KNX Datapoint Type Library</name>
   <description>KNX Device Categories for OSGi DeviceManager are Interfaces for all KNX Datapoint Types specifying methods for communication with device services.</description>
@@ -51,7 +51,6 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.3.6</version>
         <extensions>true</extensions>
         <configuration>
           <instructions>
