--- a/lddi.knx/lddi.knx.networkdriver/pom.xml
+++ b/lddi.knx/lddi.knx.networkdriver/pom.xml
@@ -5,12 +5,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.universAAL.lddi</groupId>
-		<artifactId>lddi.pom</artifactId>
-		<version>2.0.1-SNAPSHOT</version>
-		<relativePath>../lddi.pom</relativePath>
+		<artifactId>lddi.pom.knx</artifactId>
+		<version>2.0.2-SNAPSHOT</version>
+		<relativePath>../lddi.pom.knx</relativePath>
 	</parent>
 	<artifactId>lddi.knx.networkdriver</artifactId>
-	<version>2.0.1-SNAPSHOT</version>
+	<version>2.0.2-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>universAAL LDDI KNX network driver</name>
 	<description>This bundle connects to a UPD Multicast Channel on the local IP network where KNX bus messages can be sent and received. Usually a KNX/IP Gateway is used to connect the UDP Multicast Channel to the KNX bus system. The base source code is taken from the DOG2 project on http://domoticdog.sourceforge.net and slightly modified to run standalone.</description>
@@ -72,17 +72,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.6</version>
 				<extensions>true</extensions>
-				<executions>
-					<execution>
-						<id>bundle-manifest</id>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>manifest</goal>
-						</goals>
-					</execution>
-				</executions>
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
