restructuring lddi repo

--- a/.gitignore
+++ b/.gitignore
@@ -14,18 +14,18 @@ lddi.bluetooth/lddi.lib.ieeex73std/.project
 lddi.bluetooth/lddi.lib.ieeex73std/.settings
 lddi.bluetooth/lddi.lib.ieeex73std/target
 lddi.bluetooth/lddi.pom.bluetooth/target
-lddi.common/lddi.hw.exporter.activityhub/.classpath
-lddi.common/lddi.hw.exporter.activityhub/.project
-lddi.common/lddi.hw.exporter.activityhub/.settings
-lddi.common/lddi.hw.exporter.activityhub/launches/artifact-test.composite
-lddi.common/lddi.hw.exporter.activityhub/launches/runner/bundles
-lddi.common/lddi.hw.exporter.activityhub/launches/runner/cache
-lddi.common/lddi.hw.exporter.activityhub/launches/runner/felix/cache
-lddi.common/lddi.hw.exporter.activityhub/launches/runner/felix/config.ini
-lddi.common/lddi.hw.exporter.activityhub/launches/runner/log
-lddi.common/lddi.hw.exporter.activityhub/launches/target
-lddi.common/lddi.hw.exporter.activityhub/log
-lddi.common/lddi.hw.exporter.activityhub/target
+lddi.common/lddi.exporter.activityhub/.classpath
+lddi.common/lddi.exporter.activityhub/.project
+lddi.common/lddi.exporter.activityhub/.settings
+lddi.common/lddi.exporter.activityhub/launches/artifact-test.composite
+lddi.common/lddi.exporter.activityhub/launches/runner/bundles
+lddi.common/lddi.exporter.activityhub/launches/runner/cache
+lddi.common/lddi.exporter.activityhub/launches/runner/felix/cache
+lddi.common/lddi.exporter.activityhub/launches/runner/felix/config.ini
+lddi.common/lddi.exporter.activityhub/launches/runner/log
+lddi.common/lddi.exporter.activityhub/launches/target
+lddi.common/lddi.exporter.activityhub/log
+lddi.common/lddi.exporter.activityhub/target
 lddi.common/lddi.hw.exporter.x73/.classpath
 lddi.common/lddi.hw.exporter.x73/.project
 lddi.common/lddi.hw.exporter.x73/.settings
