--- a/.gitignore
+++ b/.gitignore
@@ -26,16 +26,16 @@ lddi.common/lddi.exporter.activityhub/launches/runner/log
 lddi.common/lddi.exporter.activityhub/launches/target
 lddi.common/lddi.exporter.activityhub/log
 lddi.common/lddi.exporter.activityhub/target
-lddi.common/lddi.hw.exporter.x73/.classpath
-lddi.common/lddi.hw.exporter.x73/.project
-lddi.common/lddi.hw.exporter.x73/.settings
-lddi.common/lddi.hw.exporter.x73/launches/artifact-test.composite
-lddi.common/lddi.hw.exporter.x73/launches/artifact.composite
-lddi.common/lddi.hw.exporter.x73/launches/runner/bundles
-lddi.common/lddi.hw.exporter.x73/launches/runner/cache
-lddi.common/lddi.hw.exporter.x73/launches/runner/felix/cache
-lddi.common/lddi.hw.exporter.x73/launches/runner/log
-lddi.common/lddi.hw.exporter.x73/target
+lddi.common/lddi.exporter.x73/.classpath
+lddi.common/lddi.exporter.x73/.project
+lddi.common/lddi.exporter.x73/.settings
+lddi.common/lddi.exporter.x73/launches/artifact-test.composite
+lddi.common/lddi.exporter.x73/launches/artifact.composite
+lddi.common/lddi.exporter.x73/launches/runner/bundles
+lddi.common/lddi.exporter.x73/launches/runner/cache
+lddi.common/lddi.exporter.x73/launches/runner/felix/cache
+lddi.common/lddi.exporter.x73/launches/runner/log
+lddi.common/lddi.exporter.x73/target
 lddi.common/lddi.iso11073.library/.classpath
 lddi.common/lddi.iso11073.library/.project
 lddi.common/lddi.iso11073.library/.settings
