--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,10 @@ lddi.common/lddi.exporter.x73/launches/runner/cache
 lddi.common/lddi.exporter.x73/launches/runner/felix/cache
 lddi.common/lddi.exporter.x73/launches/runner/log
 lddi.common/lddi.exporter.x73/target
-lddi.common/lddi.iso11073.library/.classpath
-lddi.common/lddi.iso11073.library/.project
-lddi.common/lddi.iso11073.library/.settings
-lddi.common/lddi.iso11073.library/target
+lddi.common/lddi.lib.activityhub/.classpath
+lddi.common/lddi.lib.activityhub/.project
+lddi.common/lddi.lib.activityhub/.settings
+lddi.common/lddi.lib.activityhub/target
 lddi.fs20/lddi.fs20.connector/.classpath
 lddi.fs20/lddi.fs20.connector/.project
 lddi.fs20/lddi.fs20.connector/.settings
