--- a/lddi.common/lddi.pom.common/pom.xml
+++ b/lddi.common/lddi.pom.common/pom.xml
@@ -17,6 +17,7 @@
     <module>../lddi.exporter.activityhub</module>
     <module>../lddi.exporter.x73</module>
     <module>../lddi.lib.activityhub</module>
+    <module>../lddi.lib.ieeex73std</module>
   </modules>
   <scm>
     <connection>${svn.base}/lddi.common/${project.artifactId}</connection>
@@ -43,7 +44,11 @@
         <artifactId>lddi.lib.activityhub</artifactId>
         <version>2.0.2-SNAPSHOT</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.lib.ieeex73std</artifactId>
+        <version>2.0.2-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
