--- a/.gitattributes
+++ b/.gitattributes
@@ -911,6 +911,7 @@ lddi.pom/composite/ASL2.0.txt -text
 lddi.pom/composite/NOTICE.txt -text
 lddi.pom/composite/pom.xml -text
 lddi.pom/pom.xml -text
+lddi.zigbee/lddi.pom.zigbee/pom.xml -text
 lddi.zigbee/lddi.zigbee.commissioning/ASL2.0.txt -text
 lddi.zigbee/lddi.zigbee.commissioning/NOTICE.txt -text
 lddi.zigbee/lddi.zigbee.commissioning/configurationFile/lddi.zigbee.commissioning.configuration.properties -text svneol=unset#text/plain
