--- a/lddi.zigbee/lddi.zigbee.commissioning/pom.xml
+++ b/lddi.zigbee/lddi.zigbee.commissioning/pom.xml
@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.lddi</groupId>
-    <artifactId>lddi.pom</artifactId>
-    <version>1.3.6-SNAPSHOT</version>
-    <relativePath>../lddi.pom/pom.xml</relativePath>
+    <artifactId>lddi.pom.zigbee</artifactId>
+    <version>2.0.2-SNAPSHOT</version>
+    <relativePath>../lddi.pom.zigbee</relativePath>
   </parent>
   <artifactId>lddi.zigbee.commissioning.adapter</artifactId>
   <version>0.3.0-SNAPSHOT</version>
