--- a/lddi.knx/lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub/pom.xml
+++ b/lddi.knx/lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub/pom.xml
@@ -46,7 +46,8 @@
     </dependency>
     <dependency>
       <groupId>org.universAAL.lddi</groupId>
-      <artifactId>lddi.iso11073.library</artifactId>
+      <artifactId>lddi.lib.activityhub</artifactId>
+      <version>2.0.2-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
