--- a/lddi.common/lddi.pom.common/pom.xml
+++ b/lddi.common/lddi.pom.common/pom.xml
@@ -12,7 +12,7 @@
   <version>2.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI Common Suite</name>
-  <description>Integration of Common components</description>
+  <description>LDDI Common components</description>
   <modules>
     <module>../lddi.exporter.activityhub</module>
     <module>../lddi.exporter.x73</module>
