--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -9,24 +9,17 @@
   </parent>
   <groupId>org.universAAL.lddi</groupId>
   <artifactId>lddi.pom</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI Suite</name>
   <description>The set of artefacts realizing the universAAL Local Discovery and Integration</description>
   <inceptionYear>2010</inceptionYear>
   <modules>
-    <module>../lddi.knx.library</module>
-    <module>../lddi.iso11073.library</module>
-    <module>../lddi.knx.networkdriver</module>
-    <module>../lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073</module>
-    <module>../lddi.knx.devicemanager</module>
-    <module>../lddi.hw.exporter.activityhub</module>
-    <module>../lddi.knx.exporter</module>
-    <module>../lddi.fs20/lddi.pom.fs20</module>
     <module>../lddi.bluetooth/lddi.pom.bluetooth</module>
-<!--    <module>../lddi.zigbee.exporter</module>
-    <module>../lddi.zigbee.commissioning</module>
-    <module>../lddi.hw.exporter.x73</module>-->
+    <module>../lddi.common/lddi.pom.common</module>
+    <module>../lddi.fs20/lddi.pom.fs20</module>
+    <module>../lddi.knx/lddi.pom.knx</module>
+    <module>../lddi.zigbee/lddi.pom.zigbee</module>
     <module>composite</module>
   </modules>
   <scm>
@@ -58,51 +51,6 @@
         <version>2.0.1-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.library</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.iso11073.library</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.networkdriver</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.dpt1refinementdriver.iso11073</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.hw.exporter.activityhub</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.exporter</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.devicemanager</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.composite</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.lib.ieeex73std</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
