--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/.classpath
 lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/.project
 lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/.settings
+lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/target
 lddi.bluetooth/lddi.continuahdpmanager.caller.test/.classpath
 lddi.bluetooth/lddi.continuahdpmanager.caller.test/.project
 lddi.bluetooth/lddi.continuahdpmanager.caller.test/.settings
