--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -62,6 +62,11 @@
         <artifactId>lddi.lib.activityhub</artifactId>
         <version>2.0.2-SNAPSHOT</version>
       </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.composite</artifactId>
+        <version>2.0.2-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <repositories>
