--- a/lddi.common/lddi.lib.activityhub/pom.xml
+++ b/lddi.common/lddi.lib.activityhub/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>lddi.lib.activityhub</artifactId>
 	<version>2.0.2-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-	<name>universAAL LDDI Java class library for ISO/IEEE 11073 standard - ActivityHub Specification</name>
+	<name>universAAL LDDI Library for ISO/IEEE 11073 standard - ActivityHub Specification</name>
 	<description>ISO 11073 Device Categories for OSGi DeviceManager are Interfaces for all ISO 11073 sensor types, specifying methods for communication with device services.</description>
 	<inceptionYear>2012</inceptionYear>
 	<organization>
