--- a/lddi.zigbee/lddi.pom.zigbee/pom.xml
+++ b/lddi.zigbee/lddi.pom.zigbee/pom.xml
@@ -14,7 +14,7 @@
   <name>universAAL LDDI ZigBee Suite</name>
   <description>Integration of ZigBee components</description>
   <modules>
-    <!-- <module>../lddi.zigbee.commissioning</module> -->
+    <!-- <module>../lddi.zigbee.commissioning.adapter</module> -->
     <!-- <module>../lddi.zigbee.exporter</module> -->
     <!-- <module>../zb4osgi/zb4osgi</module> -->
   </modules>
@@ -40,4 +40,22 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <repositories>
+    <repository>
+      <id>aaloa</id>
+      <name>aaloa Repositories</name>
+      <url>http://nexus.aaloa.org/content/repositories/releases/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>aaloa-snapshots</id>
+      <name>aaloa Snapshot Repositories</name>
+      <url>http://nexus.aaloa.org/content/repositories/snapshots/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+  </repositories>
 </project>
