--- a/lddi.knx/lddi.knx.exporter/pom.xml
+++ b/lddi.knx/lddi.knx.exporter/pom.xml
@@ -30,10 +30,10 @@
     </developer>
   </developers>
   <dependencies>
-    <dependency>
-      <groupId>org.universAAL.support</groupId>
-      <artifactId>itests</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.universAAL.support</groupId>-->
+<!--      <artifactId>itests</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.osgi.core</artifactId>
