--- a/lddi.knx/lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub/pom.xml
+++ b/lddi.knx/lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub/pom.xml
@@ -47,6 +47,7 @@
     <dependency>
       <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.lib.activityhub</artifactId>
+      <version>2.0.2-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
