--- a/lddi.common/lddi.exporter.activityhub/pom.xml
+++ b/lddi.common/lddi.exporter.activityhub/pom.xml
@@ -67,6 +67,7 @@
     <dependency>
       <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.lib.activityhub</artifactId>
+      <version>2.0.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
