--- a/lddi.pom/composite/pom.xml
+++ b/lddi.pom/composite/pom.xml
@@ -22,6 +22,7 @@
     <dependency>
       <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.lib.activityhub</artifactId>
+      <version>2.0.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.universAAL.lddi</groupId>
