--- a/lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/pom.xml
+++ b/lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/pom.xml
@@ -63,7 +63,8 @@
     <dependency>
       <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.lib.ieeex73std</artifactId>
-    </dependency>
+      <version>2.0.2-SNAPSHOT</version>
+	</dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.osgi.core</artifactId>
