--- a/lddi.knx/lddi.pom.knx/pom.xml
+++ b/lddi.knx/lddi.pom.knx/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.3-SNAPSHOT</version>
     <relativePath>../../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.pom.knx</artifactId>
@@ -18,7 +18,7 @@
     <module>../lddi.knx.exporter</module>
     <module>../lddi.knx.library</module>
     <module>../lddi.knx.networkdriver</module>
-    <module>../lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub</module>
+    <!--<module>../lddi.knx.refinementdrivers/lddi.knx.refinementdriver.dpt1.activityhub</module>-->
   </modules>
   <scm>
     <connection>${svn.base}/lddi.knx/${project.artifactId}</connection>
@@ -30,6 +30,11 @@
   </properties>
   <dependencyManagement>
     <dependencies>
+	   <!-- <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.osgi.core</artifactId>
+	  <version>1.0.1</version>
+    </dependency>-->
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.knx.devicemanager</artifactId>
