--- a/lddi.zigbee/lddi.zigbee.exporter/pom.xml
+++ b/lddi.zigbee/lddi.zigbee.exporter/pom.xml
@@ -83,9 +83,8 @@
       <version>0.6.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>org.universaal.lddi</groupId>
+      <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.zigbee.commissioning.adapter</artifactId>
-      <version>0.3.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <!-- ______________________________________________________ -->
