--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,15 @@ lddi.common/lddi.lib.ieeex73std/target
 lddi.common/lddi.pom.common/.project
 lddi.common/lddi.pom.common/.settings
 lddi.common/lddi.pom.common/target
+lddi.config/lddi.knx.devicemanager.config/.project
+lddi.config/lddi.knx.devicemanager.config/.settings
+lddi.config/lddi.knx.devicemanager.config/target
+lddi.config/lddi.knx.networkdriver.config/.project
+lddi.config/lddi.knx.networkdriver.config/.settings
+lddi.config/lddi.knx.networkdriver.config/target
+lddi.config/lddi.pom.config/.project
+lddi.config/lddi.pom.config/.settings
+lddi.config/lddi.pom.config/target
 lddi.fs20/lddi.fs20.connector/.classpath
 lddi.fs20/lddi.fs20.connector/.project
 lddi.fs20/lddi.fs20.connector/.settings
