--- a/lddi.bluetooth/lddi.continuahdpmanager.subscriber.test/pom.xml
+++ b/lddi.bluetooth/lddi.continuahdpmanager.subscriber.test/pom.xml
@@ -47,6 +47,10 @@
       <artifactId>mw.container.osgi</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.universAAL.middleware</groupId>
+      <artifactId>mw.bus.context.osgi</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.personalhealthdevice</artifactId>
     </dependency>
