--- a/lddi.common/lddi.lib.ieeex73std/pom.xml
+++ b/lddi.common/lddi.lib.ieeex73std/pom.xml
@@ -1,14 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.universAAL.lddi</groupId>
-		<artifactId>lddi.pom.common</artifactId>
-		<version>2.0.2-SNAPSHOT</version>
-		<relativePath>../lddi.pom.common</relativePath>
-	</parent>
+  <parent>
+    <groupId>org.universAAL.lddi</groupId>
+    <artifactId>lddi.pom.common</artifactId>
+    <version>2.0.4-SNAPSHOT</version>
+    <relativePath>../lddi.pom.common</relativePath>
+  </parent>
   <artifactId>lddi.lib.ieeex73std</artifactId>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>2.0.3-SNAPSHOT</version>
   <name>universAAL LDDI Library IEEE x073 standard implementation</name>
   <description>Java implementation of Continua Health Alliance standard (ISO/IEEE x073)</description>
   <organization>
