--- a/lddi.zigbee/lddi.zigbee.commissioning.adapter/pom.xml
+++ b/lddi.zigbee/lddi.zigbee.commissioning.adapter/pom.xml
@@ -1,29 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.zigbee</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.4-SNAPSHOT</version>
     <relativePath>../lddi.pom.zigbee</relativePath>
   </parent>
   <artifactId>lddi.zigbee.commissioning.adapter</artifactId>
-  <version>0.3.0-SNAPSHOT</version>
+  <version>0.3.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI ZigBee commissioning bundle</name>
-  <pluginRepositories>
-    <pluginRepository>
-      <releases>
-        <updatePolicy>never</updatePolicy>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>central</id>
-      <name>Maven Plugin Repository</name>
-      <url>http://repo1.maven.org/maven2</url>
-    </pluginRepository>
-  </pluginRepositories>
   <dependencies>
     <dependency>
       <groupId>org.ops4j.pax.logging</groupId>
@@ -58,7 +46,7 @@
     </dependency>
     <dependency>
       <groupId>org.aaloa.zb4osgi</groupId>
-      <artifactId>org.aaloa.zb4osgi.zigbee.basedriver.api </artifactId>
+      <artifactId>org.aaloa.zb4osgi.zigbee.basedriver.api</artifactId>
       <version>0.6.0-SNAPSHOT</version>
     </dependency>
     <dependency>
@@ -87,10 +75,22 @@
       <version>0.7.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
+  <pluginRepositories>
+    <pluginRepository>
+      <releases>
+        <updatePolicy>never</updatePolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>Maven Plugin Repository</name>
+      <url>http://repo1.maven.org/maven2</url>
+    </pluginRepository>
+  </pluginRepositories>
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
       </plugin>
       <plugin>
@@ -99,7 +99,7 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-Author><![CDATA[ Manlio Bacco <manlio.bacco@isti.cnr.it>]]></Bundle-Author>
+            <Bundle-Author>Manlio Bacco &lt;manlio.bacco@isti.cnr.it></Bundle-Author>
             <Bundle-Name>${project.name}</Bundle-Name>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Bundle-Activator>org.universAAL.lddi.zigbee.commissioning.Activator</Bundle-Activator>
